# vmse2000-firmware

./: .gitignore  .vmse2000.default.ini.swp  README.md  a1.py  elwav.py  gentokens.py  nparse.py  oneprint.py  pyproject.toml  requirements.txt  run-vmse2000.sh  send.py  swear  tparse.py  trigger.sh  vmse2000.default.ini  vmse2000.py  vmse_start.sh
assets/: .swear-alta.txt.swp  swear-alta.txt  swear-alta2.txt  swear.txt
init.d/: vmse
