[tool.poetry]
name = "vmse2000-firmware"
version = "0.1.0"
description = "Orchestrator for printing, playing sound and taking in words"
authors = ["Peer Springstübe <kratenko@garstig.org>, nemo <git@ningu.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
python-escpos = "^3.1"
pyusb = "^1.2.1"
pyserial = "^3.5"
qrcode = "^7.4.2"
Pillow = "^10.1.0"
pyalsaaudio = "^0.10.0"
gpiod = "^2.1.3"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
